--- a/package.json
+++ b/package.json
@@ -14,23 +14,10 @@
     "url": "https://github.com/gaearon/react-transform-boilerplate.git"
   },
   "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "edit",
-    "webpack",
-    "babel",
-    "react-transform"
+    "react"
   ],
   "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
   "license": "CC0-1.0",
-  "bugs": {
-    "url": "https://github.com/gaearon/react-transform-boilerplate/issues"
-  },
   "homepage": "https://github.com/gaearon/react-transform-boilerplate",
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
@@ -55,7 +42,9 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-router": "^3.0.2"
   }
 }
